[FIX] marketing: proper emoji display
The emoji button in the text field was misaligned. Appearing too far in
the form view. This led to the emoji being overlapped by other
components. The fix consists in :
 - Added a 'position-absolute' to the button for correct alignement
 - Updated the parent container to 'position:relative' in the css for
   correct positioning.

This fix addresses a user interface bug and ensures consistent emoji
positioning/display.

opw-4332574

--- a/addons/web/static/src/views/fields/char/char_field.scss
+++ b/addons/web/static/src/views/fields/char/char_field.scss
@@ -11,7 +11,7 @@
 }
 
 .o_field_input_buttons {
-    position: absolute;
+    position: relative;
     right: 0;
     height: 100%;
     display: inline-flex;
